--- a/events.html
+++ b/events.html
@@ -27,14 +27,41 @@
         </nav>
         <!-- navbar ends -->
         
-     <!-- visitors -->
-     <div id="visitors">
-    </div>
-    <!-- visitors ends here -->
-    <!-- cards -->
-    <div  id="cards" class="w-full h-full flex flex-wrap my-10 px-16 ">
-    </div>
-    <!-- cards ends here -->
+        <!-- events1 begins here -->
+        <div class="bg-opacity-100 text-white py-6 border-t border-gray-300">
+            <div class="container mx-auto">
+                <div class="flex flex-col md:flex-row justify-between">
+                    <div class="mb-4 md:mb-0">
+                        <p class="text-md font-semibold text-4xl border-b border-gray-300">EVENTS</p>
+                    </div>
+                    <div class="flex">
+                    <div class="dropdown-container relative">
+                        <button
+                            type="button"
+                            class="bg-white text-black rounded-3xl px-4 mx-5 py-2 font-semibold flex "
+                        >
+                            <img src="./images/Vector.png" class="mr-2 h-6 w-6">2023<img src="./images/Vector (1).png" class=" ml-2 mt-2 h-3 w-4">
+                        </button>
+                        <div class="dropdown-menu absolute hidden mt-2 bg-white text-black rounded-lg shadow-lg">
+                            <!-- Dropdown menu content here -->
+                        </div>
+                    </div>
+                    <div class="dropdown-container relative">
+                        <button
+                            type="button"
+                            class="bg-white text-black rounded-3xl px-4 mx-5 py-2 font-semibold flex"
+                        >
+                        <img src="./images/Group.png" class="mr-2 h-6 w-6">Mode<img src="./images/Vector (1).png" class=" ml-2 mt-2 h-3 w-4">
+                        </button>
+                        <div class="dropdown-menu absolute hidden mt-2 bg-white text-black rounded-lg shadow-lg">
+                            <!-- Dropdown menu content here -->
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     
 <!-- footer begins here -->
@@ -49,7 +76,7 @@
                 <input
                     type="text"
                     placeholder="Enter your email address"
-                    class="border rounded-2xl border-2 px-4 py-3 w-full md:w-96 focus:outline-none focus:ring border-[#0085FF]"
+                    class=" rounded-2xl border-2 px-4 py-3 w-full md:w-96 focus:outline-none focus:ring border-[#0085FF]"
                 />
                 <button
                     type="submit"
