--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
                     <div class="mb-4 md:mb-0">
                         <p class="text-md font-semibold text-6xl" style="text-align: center;">EVENTS</p>
                     </div>
-                    <div class="flex" style="justify-content: center;">
+                    <div class="flex" style="justify-content: center;display: none;">
                     <div class="dropdown-container relative">
                         <button 
                             type="button"
