--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
         </nav>
         <!-- navbar ends -->
         
-        <div class="container mx-auto my-20 " id="latest" style="height: 30vw;display: flex;
+        <div class="container mx-auto my-20 " id="latest" style="display: flex;
         flex-direction: column;
         align-items: center;border-radius: 20px;width: 80%;margin-bottom: 2vw;">
         
@@ -166,6 +166,9 @@
         .name {
             display: none;
         }
+    }
+    *{
+        font-size: 1.2rem !important;
     }
 </style>
 <script src="js/events.js"></script>
