mishal gallery connect to sanity

--- a/events.html
+++ b/events.html
@@ -20,6 +20,8 @@
                 <li><a href="./events.html" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Resources</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Core Team</a></li>
+                <li><a href="./achieve.html" class="text-white text-lg hover:text-gray-300">Acheivements</a></li>
+                <li><a href="./gallery.html" class="text-white text-lg hover:text-gray-300">Gallery</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Contact</a></li>
                 <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
             </ul>
