--- a/achieve.html
+++ b/achieve.html
@@ -20,7 +20,7 @@
                 <li><a href="./events.html" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Resources</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Core Team</a></li>
-                <li><a href="./achieve.html" class="text-white text-lg hover:text-gray-300">Acheivements</a></li>
+                <li><a href="./acheive.html" class="text-white text-lg hover:text-gray-300">Acheivements</a></li>
                 <li><a href="./gallery.html" class="text-white text-lg hover:text-gray-300">Gallery</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Contact</a></li>
                 <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
@@ -29,14 +29,54 @@
         </nav>
         <!-- navbar ends -->
         
-     <!-- visitors -->
-     <div id="visitors">
+<div class="container mx-auto mt-8 mb-20">
+    <h1 class="text-5xl font-bold mb-10 ml-24 text-white">Acheivements</h1>
+    <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ml-24 mr-24">
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 1</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 2</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 3</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 4</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 5</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
+        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
+            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
+            <div class="p-4">
+                <h2 class="text-xl font-bold mb-2 text-white ">Event 6</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+        </div>
     </div>
-    <!-- visitors ends here -->
-    <!-- cards -->
-    <div  id="cards" class="w-full h-full flex flex-wrap my-10 px-16 ">
-    </div>
-    <!-- cards ends here -->
+</div>
+
 
     
 <!-- footer begins here -->
@@ -125,5 +165,5 @@
 
   
 </body>
-<script src="js/index.js"></script>
+<script src="js/acheive.js"></script>
 </html>
