--- a/coreteam.html
+++ b/coreteam.html
@@ -16,10 +16,12 @@
         <img src="images/hamburger.png" class="block lg:hidden">
         <img src="images/logo.png" class="hidden lg:block h-20 w-64 mt-0"> 
             <ul class="hidden lg:flex space-x-6 lg:space-x-12 justify-end p-4 w-1/2">
-                <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Home</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
+                <li><a href="./index.html" class="text-white text-lg hover:text-gray-300 ">Home</a></li>
+                <li><a href="./events.html" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Resources</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Core Team</a></li>
+                <li><a href="./achieve.html" class="text-white text-lg hover:text-gray-300">Acheivements</a></li>
+                <li><a href="./gallery.html" class="text-white text-lg hover:text-gray-300">Gallery</a></li>
                 <li><a href="#" class="text-white text-lg hover:text-gray-300">Contact</a></li>
                 <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
             </ul>
