--- a/gallery.html
+++ b/gallery.html
@@ -28,15 +28,14 @@
         </div>
         </nav>
         <!-- navbar ends -->
+        <div>   
+            <h1 class="text-5xl font-bold mt-4  ml-24 text-white ">Gallery</h1>
+        </div>
         
-     <!-- visitors -->
-     <div id="visitors">
-    </div>
-    <!-- visitors ends here -->
-    <!-- cards -->
-    <div  id="cards" class="w-full h-full flex flex-wrap my-10 px-16 ">
-    </div>
-    <!-- cards ends here -->
+        <div class="p-5 md:p-10">
+            <div id="puppies" class="columns-1 sm:columns-2 lg:columns-3 xl:columns-4 gap-5 lg:gap-8 [&>img:not(:first-child)]:mt-5 lg:[&>img:not(:first-child)]:mt-8">
+            </div>
+          </div>
 
     
 <!-- footer begins here -->
@@ -125,5 +124,5 @@
 
   
 </body>
-<script src="js/index.js"></script>
+<script src="js/acheive.js"></script>
 </html>
