--- a/events.html
+++ b/events.html
@@ -5,25 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>ACES CUSAT</title>
 </head>    
 
 <body class="bg-[url('/images/background.png')] bg-black bg-cover bg-repeat-y">
     <!-- navbar -->
-    <nav class="flex-row items-center bg-transparent max-w-10xl p-4 sm:px-6 lg:px-8">
-       <div class="flex justify-between font-semibold "> 
-        <img src="images/hamburger.png" class="block lg:hidden">
-        <img src="images/logo.png" class="hidden lg:block h-20 w-64 mt-0"> 
-            <ul class="hidden lg:flex space-x-6 lg:space-x-12 justify-end p-4 w-1/2">
-                <li><a href="./index.html" class="text-white text-lg hover:text-gray-300 ">Home</a></li>
-                <li><a href="./events.html" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Resources</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300">Core Team</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300">Contact</a></li>
-                <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
-            </ul>
-        </div>
-        </nav>
+    <span class="text-3xl cursor-pointer mx-2 md:hidden block">
+        <img src="images/hamburger.png" class="block lg:hidden" onclick="Menu(this)">
+    </span>
+    
+
+    <ul class="md:flex md:items-center bg-[#060a12] 
+    font-semibold md:justify-between z-[1] md:z-auto md:static 
+    absolute text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 
+    md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
+        <img src="images/logo.png" class="hidden md:block h-20 w-64 mt-0">
+
+        <li class="mx-2 my-6 md:my-0">
+        <a href="./index.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">HOME</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./events.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">EVENTS</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">RESOURCES</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./coreteam.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CORE TEAM</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
+      </li>
+      <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
+
+  
+<h2 class=""></h2>
+    </ul>
+  </nav>
         <!-- navbar ends -->
         
         <!-- events1 begins here -->
@@ -146,7 +166,12 @@
   
 <!-- footer ends here -->
 
-
+<script>
+    function Menu(e){
+      let list = document.querySelector('ul');
+      e.name === 'menu' ? (e.name = "close",list.classList.add('top-[80px]') , list.classList.add('opacity-100')) :( e.name = "menu" ,list.classList.remove('top-[80px]'),list.classList.remove('opacity-100'))
+    }
+  </script>
   
 </body>
 <script src="js/index.js"></script>
