--- a/achieve.html
+++ b/achieve.html
@@ -11,69 +11,49 @@
 
 <body class="bg-[url('/images/background.png')] bg-black bg-cover bg-repeat-y">
     <!-- navbar -->
-    <nav class="flex-row items-center bg-transparent max-w-10xl p-4 sm:px-6 lg:px-8">
-       <div class="flex justify-between font-semibold "> 
-        <img src="images/hamburger.png" class="block lg:hidden">
-        <img src="images/logo.png" class="hidden lg:block h-20 w-64 mt-0"> 
-            <ul class="hidden lg:flex space-x-6 lg:space-x-12 justify-end p-4 w-1/2">
-                <li><a href="./index.html" class="text-white text-lg hover:text-gray-300 ">Home</a></li>
-                <li><a href="./events.html" class="text-white text-lg hover:text-gray-300 ">Events</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300 ">Resources</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300">Core Team</a></li>
-                <li><a href="./acheive.html" class="text-white text-lg hover:text-gray-300">Acheivements</a></li>
-                <li><a href="./gallery.html" class="text-white text-lg hover:text-gray-300">Gallery</a></li>
-                <li><a href="#" class="text-white text-lg hover:text-gray-300">Contact</a></li>
-                <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
-            </ul>
-        </div>
-        </nav>
+    <span class="text-3xl cursor-pointer mx-2 md:hidden block">
+        <img src="images/hamburger.png" class="block lg:hidden" onclick="Menu(this)">
+    </span>
+    
+
+    <ul class="md:flex md:items-center bg-[#060a12] 
+    font-semibold md:justify-between z-[1] md:z-auto md:static 
+    absolute text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 
+    md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
+        <img src="images/logo.png" class="hidden md:block h-20 w-64 mt-0">
+
+        <li class="mx-2 my-6 md:my-0">
+        <a href="./index.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">HOME</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./events.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">EVENTS</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">RESOURCES</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./coreteam.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CORE TEAM</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./achieve.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">ACHIEVEMENTS</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="./gallery.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">GALLERY</a>
+      </li>
+      <li class="mx-2 my-6 md:my-0">
+        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
+      </li>
+      <li><input class="border-solid p-2 border-2 mb-2 border-white rounded-full text-md w-18" placeholder="🔍 Search" style="background-color: #0a0e21" /></li>
+
+  
+<h2 class=""></h2>
+    </ul>
+  </nav>
         <!-- navbar ends -->
         
 <div class="container mx-auto mt-8 mb-20">
     <h1 class="text-5xl font-bold mb-10 ml-24 text-white">Acheivements</h1>
-    <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ml-24 mr-24">
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 1</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 2</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 3</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 4</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 5</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
-        <div class="bg-opacity-13 bg-[#071017] rounded-lg shadow-lg shadow-blue-900">
-            <img src="https://a-z-animals.com/media/2021/12/Prettiest-_-Cutest-Dogs-header.jpg" alt="image1" class="w-full h-64 object-cover zoomable rounded-lg">
-            <div class="p-4">
-                <h2 class="text-xl font-bold mb-2 text-white ">Event 6</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-        </div>
+    <div id="achievegrid" class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ml-24 mr-24">
     </div>
 </div>
 
@@ -161,9 +141,14 @@
 </div>
   
 <!-- footer ends here -->
-
+<script>
+    function Menu(e){
+      let list = document.querySelector('ul');
+      e.name === 'menu' ? (e.name = "close",list.classList.add('top-[80px]') , list.classList.add('opacity-100')) :( e.name = "menu" ,list.classList.remove('top-[80px]'),list.classList.remove('opacity-100'))
+    }
+</script>
 
   
 </body>
-<script src="js/acheive.js"></script>
+<script src="js/achievements.js"></script>
 </html>
