--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>ACES CUSAT</title>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="js/chart.js"></script>
+<script src="js/placement.js"></script>
 </head>    
 
 <body class="bg-[url('/images/background.png')] bg-btnText bg-contain bg-blend-normal bg-repeat-y">
