card responsive done

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>-->
     <!-- visitors ends here -->
     <!-- cards -->
-    <div  id="cards" class="w-full h-full flex flex-wrap my-10 px-16 ">
+    <div  id="cards" class="w-full h-full flex flex-wrap gap-4 my-10 px-6 md:px-16 ">
     </div>
     <!-- cards ends here -->
 
