Changed footer logos

--- a/gallery.html
+++ b/gallery.html
@@ -106,8 +106,7 @@
         </div>
         <div class="flex flex-1">
             <div class="flex flex-col mx-auto text-center">
-                <img src="images/aces.png" alt="logo" class=" h-24">
-                <img src="images/aces2.png" alt="logo" class=" h-10 mt-[-20px]">
+                <img src="images/logo.png" class="hidden md:block h-20 w-64 mt-0">
 
                 <p class="text-sm text-gray-300">copyright&copy;acescusat. All Rights Reserved</p>
 
