--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h1 class="text-center text-5xl font-semibold">OUR OBJECTIVES</h1>
             </div>
             
-            <div class="flex flex-col px-8 md:px-12 border-2 border-cyan-500 items-center justify-center md:flex-row md:space-y-4 space-y-8 p-2 md:space-x-8 md:mx-18 lg:mx-24 my-12">
+            <div class="flex flex-col px-8 md:px-12 items-center justify-center md:flex-row md:space-y-4 space-y-8 p-2 md:space-x-8 md:mx-18 lg:mx-24 my-12">
                 <img src="images/Group 14.png" class="sm:w-64 sm:h-64 md:w-48 md:h-48 lg:w-1/4 lg:h-1/4 shadow-lg">
                 <img src="images/Group 15.png" class="sm:w-64 sm:h-64 md:w-48 md:h-48 lg:w-1/4 lg:h-1/4 shadow-lg">
                 <img src="images/Group 16.png"class="sm:w-64 sm:h-64 md:w-48 md:h-48 lg:w-1/4 lg:h-1/4 shadow-lg">
