--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                 <h1 class="font-normal text-4xl shadow-lg lg:text-3xl text-center lg:text-left">WELCOME TO OFFICIAL WEBSITE OF</h1>
                 <h1 class="font-bold text-7xl shadow-lg lg:text-9xl text-center lg:text-left pb-4 relative">
                     ACES CUSAT
-                    <span class="absolute bottom-0 left-0 w-full border-b-2 border-white"></span>
                 </h1>
                 
                 <p class="font-semibold shadow-lg text-textCol text-lg text-center sm:text-xl mb-12">
@@ -61,14 +60,19 @@
                 </p>
 
             <div class="flex flex-row justify-center">
-                <button class="px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-btnText sm:text-lg md:text-3xl lg:text-3xl text-center 
-                bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF] rounded-xl drop-shadow-2xl mr-12">
-                    <a href="https://drive.google.com/drive/folders/1XZGpIUshchqAXZB4FMh9WDrN0qe5rSed">RESOURCES</a>  
-                </button>
+                <button class="cursor-pointer 
+                px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-btnText sm:text-lg md:text-3xl lg:text-3xl text-center 
+                bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF] rounded-xl drop-shadow-2xl mr-12 
+                active:translate-x-0.5 active:translate-y-0.5 hover:shadow-[0.5rem_0.5rem_#141b2b,-0.5rem_-0.5rem_#00BCD4] transition">
+                    RESOURCES
+                  </button>
 
-                <button class="px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-buttonCol sm:text-lg md:text-3xl lg:text-3xl text-center border-2  border-buttonCol bg-transparent rounded-xl">
-                    <a href="./gallery.html">GALLERY</a>
-                </button>
+                  <button class="cursor-pointer uppercase
+                  px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-buttonCol sm:text-lg md:text-3xl lg:text-3xl 
+                  text-center border-2  border-buttonCol bg-transparent rounded-xl
+                  active:translate-x-0.5 active:translate-y-0.5  hover:shadow-[0.5rem_0.5rem_#141b2b,-0.5rem_-0.5rem_#00BCD4] transition">
+                      GALLERY
+                    </button>
             </div>
 
             </div>
