core team adjustments

--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
 
     
 <!-- footer begins here -->
-<div class="bg-[#071017]  text-white border-t border-gray-300">
+<div class="bg-[#071017]  text-white border-t border-gray-300 bottom-0">
    
     <hr class="border-t border-[#438EFF] w-full">
     <div class="w-full flex flex-col gap-y-16 md:flex-row p-10">
