--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script src="js/placement.js"></script>
 </head>    
 
-<body class="bg-[url('/images/background.png')] bg-btnText bg-contain bg-blend-normal bg-repeat-y">
+<body class="bg-[url('/images/background.png')] bg-btnText smooth-scroll">
  
 
     <span class="text-3xl cursor-pointer mx-2 md:hidden block">
@@ -106,7 +106,7 @@
 
     
 <!-- footer begins here -->
-<div class="bg-[#071017]  text-white border-t border-gray-300">
+<div class="bg-[#071017]  text-white border-t border-gray-300 bottom-0">
    
     <hr class="border-t border-[#438EFF] w-full">
     <div class="w-full flex flex-col gap-y-16 md:flex-row p-10">
@@ -180,5 +180,6 @@
   </script>
 </body>
 <script src="js/index.js"></script>
+<script src="js/smooth-scroll.js"></script>
 </html>
 
