--- a/coreteam.html
+++ b/coreteam.html
@@ -67,7 +67,7 @@
                     
                     
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Data Mining</div>
                         </div>
 
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web Development,ML</div>
                         </div>
 
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web Dev,Web3 Dev</div>
                         </div>
 
@@ -166,7 +166,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">AI/ML</div>
                         </div>
 
@@ -199,7 +199,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web dev, Stocks</div>
                         </div>
 
@@ -232,7 +232,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web Developmen, ML</div>
                         </div>
 
@@ -265,7 +265,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">AI & DS, DevOps, Django</div>
                         </div>
 
@@ -298,7 +298,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web dev, Django</div>
                         </div>
 
@@ -331,7 +331,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web Development</div>
                         </div>
 
@@ -364,7 +364,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web & App Development</div>
                         </div>
 
@@ -397,7 +397,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Game Development,AI/ML</div>
                         </div>
 
@@ -430,7 +430,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">UI/UX Designing</div>
                         </div>
 
@@ -462,7 +462,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">Web Dev, Data Science</div>
                         </div>
 
@@ -495,7 +495,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Web Dev, Photograph</div>
                         </div>
 
@@ -528,7 +528,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">Photoshop</div>
                         </div>
 
@@ -561,7 +561,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">Web dev,ML</div>
                         </div>
 
@@ -594,7 +594,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">Robotics,AI/ML</div>
                         </div>
 
@@ -627,7 +627,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">Web & AI/ML Dev</div>
                         </div>
 
@@ -659,7 +659,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold">Skills:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">AI/ML, Cybersecurity, DevOps</div>
                         </div>
 
@@ -692,7 +692,7 @@
                         </div>
 
                         <div class="flex flex-col md:flex-row text-left">
-                            <div class="text-cyan-400 sm:text-md md:text-lg mr-0 lg:text-2xl font-semibold">Skills & Interests:</div>
+                            <div class="text-cyan-400 sm:text-md md:text-lg mr-0 lg:text-2xl font-semibold">Skillss:</div>
                             <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold ">AI/ML,DevOps</div>
                         </div>
 
