--- a/coreteam.html
+++ b/coreteam.html
@@ -50,9 +50,9 @@
         <!--cards-->
         <!-- row 1 -->
 
-        <div class="flex flex-col flex-wrap justify-between sm:flex-row space-y-12 space-x-2 mx-1 md:mx-8 ">
+        <div class="flex flex-col flex-wrap justify-between sm:flex-row space-y-12 space-x-2 md:mx-8 ">
             
-            <div class="flex justify-start border-sky-500 border-2   w-[340px] sm:w-[340px]  md:w-[420px] lg:w-[560px]">
+            <div class="flex justify-start border-sky-500 border-2 w-[340px] sm:w-[340px] mx:auto md:w-[420px] lg:w-[560px]">
                 <div class="flex  items-center">
                     <img src="./images/sudheep.png" class="w-32 h-40 md:w-32 md:h-40 lg:w-48 lg:h-64">
 
