--- a/hod.html
+++ b/hod.html
@@ -41,7 +41,7 @@
 <h2 class=""></h2>
     </ul>
   </nav>
-  <img src="images/sudheepjpg.jpg" class="flex my-8 mx-auto w-64 h-64">
+  <img src="images/sudheep.png" class="flex my-8 mx-auto w-64 h-72">
   <h1 class="text-[#0085FF] text-lg font-bold md:text-2xl flex flex-shrink">Biodata and Key Achievements:</h1>
   <p class="text-white text-lg font-semibold md:text-2xl flex flex-shrink">
      Was a first rank holder in both B.Tech and M.Tech. Worked as the Head division of computer engineering 3 times and was member board of studies, CUSAT. Published a reference book by an international publisher Cengage learning, titled “Data mining and warehousing”. Published several international publications and working as a Ph.D guide in CUSAT, Kochi, India. He has produced 8 doctorates till date and published two patents waiting for granting.. Co-ordinated an international conference ICICT, held at Kochi, December 2014 as a Program Co-chair. Published over 20 international publications in reputed journals and conference papers. Worked as a reviewer of prestigious journals like 
