--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="./coreteam.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CORE TEAM</a>
       </li>
       <li class="mx-2 my-6 md:my-0">
-        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
+        <a href="#contact" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
       </li>
   
 <h2 class=""></h2>
@@ -64,18 +64,20 @@
                 </p>
 
             <div class="flex flex-row justify-center">
+
                 <button class="cursor-pointer 
                 px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-btnText sm:text-lg md:text-3xl lg:text-3xl text-center 
                 bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF] rounded-xl drop-shadow-2xl mr-12 
                 active:translate-x-0.5 active:translate-y-0.5 hover:shadow-[0.5rem_0.5rem_#141b2b,-0.5rem_-0.5rem_#00BCD4] transition">
-                    RESOURCES
+                    <a href="https://drive.google.com/drive/folders/1XZGpIUshchqAXZB4FMh9WDrN0qe5rSed" >RESOURCES</a>
                   </button>
 
                   <button class="cursor-pointer uppercase
                   px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-buttonCol sm:text-lg md:text-3xl lg:text-3xl 
                   text-center border-2  border-buttonCol bg-transparent rounded-xl
                   active:translate-x-0.5 active:translate-y-0.5  hover:shadow-[0.5rem_0.5rem_#141b2b,-0.5rem_-0.5rem_#00BCD4] transition">
-                      GALLERY
+                  <a href="gallery.html">GALLERY</a>    
+                  
                     </button>
             </div>
 
@@ -110,7 +112,7 @@
 
     
 <!-- footer begins here -->
-<div class="bg-[#071017]  text-white border-t border-gray-300 bottom-0">
+<div id="contact" class="bg-[#071017] text-white border-t border-gray-300 bottom-0">
    
     <hr class="border-t border-[#438EFF] w-full">
     <div class="w-full flex flex-col gap-y-16 md:flex-row p-10">
