--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
         <a href="./coreteam.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CORE TEAM</a>
       </li>
       <li class="mx-2 my-6 md:my-0">
-        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
+        <a href="#contact" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
       </li>
   
 <h2 class=""></h2>
@@ -90,7 +90,7 @@
 
     
 <!-- footer begins here -->
-<div class="bg-[#071017]  text-white border-t border-gray-300 bottom-0">
+<div id="contact" class="bg-[#071017]  text-white border-t border-gray-300 bottom-0">
    
     <hr class="border-t border-[#438EFF] w-full">
     <div class="w-full flex flex-col gap-y-16 md:flex-row p-10">
@@ -156,7 +156,12 @@
 <!-- footer ends here -->
 
 
-  
+<script>
+    function Menu(e){
+      let list = document.querySelector('ul');
+      e.name === 'menu' ? (e.name = "close",list.classList.add('top-[80px]') , list.classList.add('opacity-100')) :( e.name = "menu" ,list.classList.remove('top-[80px]'),list.classList.remove('opacity-100'))
+    }
+  </script>
 </body>
 
 <style>
