--- a/events.html
+++ b/events.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="flex flex-row py-2">
                     <img src="images/location.png" alt="location" class=" h-6 px-2">
-                    <p class="text-sm text-gray-300">+91 1234567890</p>
+                    <p class="text-sm text-gray-300"> Thrikkakara, Kalamassery, Kochi, Kerala 682022</p>
                 </div>
             </div>
         </div>
