--- a/coreteam.html
+++ b/coreteam.html
@@ -17,10 +17,11 @@
 
     
     <ul class="md:flex md:items-center bg-[#060a12] 
-    font-semibold md:justify-between z-[1] md:z-auto md:static 
+    font-semibold md:justify-end space-x-12 z-[1] md:z-auto md:static 
     absolute text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 
     md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500">
-        <img src="images/logo.png" class="hidden md:block h-20 w-64 mt-0">
+    
+        <img src="images/logo.png" class="hidden md:block h-20 w-64 mt-0 mr-auto">
 
         <li class="mx-2 my-6 md:my-0">
         <a href="./index.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">HOME</a>
@@ -33,7 +34,7 @@
         <a href="./coreteam.html" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CORE TEAM</a>
       </li>
       <li class="mx-2 my-6 md:my-0">
-        <a href="#" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
+        <a href="#contact" class="sm:text-md md:text-lg lg:text-xl hover:text-[#0085FF] duration-500">CONTACT US</a>
       </li>
   
 <h2 class=""></h2>
