--- a/coreteam.html
+++ b/coreteam.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="flex flex-row text-left">
                             <div class="text-cyan-400 sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Position:</div>
-                            <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Student Advisor</div>
+                            <div class="text-white text-sm sm:text-md md:text-lg lg:text-2xl font-semibold capitalize">Student Coordinator</div>
                         </div>
                     
                         <div class="flex flex-row text-left">
