--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 px-2 sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-btnText sm:text-lg md:text-3xl lg:text-3xl text-center 
                 bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF] rounded-xl drop-shadow-2xl mr-12 
                 active:translate-x-0.5 active:translate-y-0.5 hover:shadow-[0.5rem_0.5rem_#141b2b,-0.5rem_-0.5rem_#00BCD4] transition">
-                    <a href="https://drive.google.com/drive/folders/1XZGpIUshchqAXZB4FMh9WDrN0qe5rSed" >RESOURCES</a>
+                    <a href="resources.html" >RESOURCES</a>
                   </button>
 
                   <button class="cursor-pointer uppercase
