--- a/resources.html
+++ b/resources.html
@@ -65,35 +65,35 @@
                 <div class="image-caption text-white font-bold text-center text-lg md:text-xl lg:text-2xl mb-2">SEMESTER</div>
             </div>
             <div class="group relative cursor-pointer overflow-hidden transition-transform transform hover:scale-105">
-                <a href="semester1.html" class="flex justify-center">
+                <a href="https://drive.google.com/drive/folders/19yXipKzR9EwQM0QuoTAwgD9w-1nmOLon" class="flex justify-center">
                     <img src="images/normal3.png" alt="Semester 1" width="150" height="150" class="transform transition-transform hover:scale-110 mb-6 mt-8">
                     <div class="underline absolute bottom-0 left-1/2 transform -translate-x-1/2 w-2/5 h-1 bg-blue-500 transform scale-x-0 transition-transform group-hover:scale-x-100"></div>
                 </a>
                 <div class="image-caption text-white font-bold text-center text-lg md:text-xl lg:text-2xl mb-2">SEMESTER</div>
             </div>
             <div class="group relative cursor-pointer overflow-hidden transition-transform transform hover:scale-105">
-                <a href="semester1.html" class="flex justify-center">
+                <a href="https://drive.google.com/drive/folders/1kwHz-ssgvZk1W0UqhClMxY1_JoLlN6C4" class="flex justify-center">
                     <img src="images/normal4.png" alt="Semester 1" width="150" height="150" class="transform transition-transform hover:scale-110 mb-6 mt-8">
                     <div class="underline absolute bottom-0 left-1/2 transform -translate-x-1/2 w-2/5 h-1 bg-blue-500 transform scale-x-0 transition-transform group-hover:scale-x-100"></div>
                 </a>
                 <div class="image-caption text-white font-bold text-center text-lg md:text-xl lg:text-2xl mb-2">SEMESTER</div>
             </div>
             <div class="group relative cursor-pointer overflow-hidden transition-transform transform hover:scale-105">
-                <a href="semester1.html" class="flex justify-center">
+                <a href="https://drive.google.com/drive/folders/1cIOt9X18JW4wO2gg8vtCluGjWqra9GBJ" class="flex justify-center">
                     <img src="images/normal5.png" alt="Semester 1" width="150" height="150" class="transform transition-transform hover:scale-110 mb-6 mt-8">
                     <div class="underline absolute bottom-0 left-1/2 transform -translate-x-1/2 w-2/5 h-1 bg-blue-500 transform scale-x-0 transition-transform group-hover:scale-x-100"></div>
                 </a>
                 <div class="image-caption text-white font-bold text-center text-lg md:text-xl lg:text-2xl mb-2">SEMESTER</div>
             </div>
             <div class="group relative cursor-pointer overflow-hidden transition-transform transform hover:scale-105">
-                <a href="semester1.html" class="flex justify-center">
+                <a href="https://drive.google.com/drive/folders/13QOq3udc1pDfaoAxg4Mz06RdffyDgnI-" class="flex justify-center">
                     <img src="images/normal6.png" alt="Semester 1" width="150" height="150" class="transform transition-transform hover:scale-110 mb-6 mt-8">
                     <div class="underline absolute bottom-0 left-1/2 transform -translate-x-1/2 w-2/5 h-1 bg-blue-500 transform scale-x-0 transition-transform group-hover:scale-x-100"></div>
                 </a>
                 <div class="image-caption text-white font-bold text-center text-lg md:text-xl lg:text-2xl mb-2">SEMESTER</div>
             </div>
             <div class="group relative cursor-pointer overflow-hidden transition-transform transform hover:scale-105">
-                <a href="semester1.html" class="flex justify-center">
+                <a href="https://drive.google.com/drive/folders/1t8Kpzca9lhb5pj6CVZvrOXfJZPE7kO8Y" class="flex justify-center">
                     <img src="images/normal7.png" alt="Semester 1" width="150" height="150" class="transform transition-transform hover:scale-110 mb-6 mt-8">
                     <div class="underline absolute bottom-0 left-1/2 transform -translate-x-1/2 w-2/5 h-1 bg-blue-500 transform scale-x-0 transition-transform group-hover:scale-x-100"></div>
                 </a>
@@ -118,7 +118,7 @@
     <div class="flex justify-center mb-16">
     <button class=" sm:px-4 p-2 md:px-4 lg:px-8 font-semibold text-btnText sm:text-lg md:text-lg lg:text-xl text-center 
     bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF] rounded-xl drop-shadow-2xl mr-12 text-white hover:scale-105 transform transition-transform">
-        <a href="blah.html" >Add Notes</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=acescusat1@gmail.com" >Add Notes</a>
       </button>
     </div>
 
