text color changes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
         <!--objectives section-->
         <div>
-            <div class="bg-gradient-to-b from-[#0085FF] to-[#00E8FF] text-transparent bg-clip-text">
+            <div class="bg-gradient-to-b from-[#0085FF] via-[#0059FF] to-[#0057FF]
+            text-transparent bg-clip-text">
                 <h1 class="text-center text-5xl font-semibold">OUR OBJECTIVES</h1>
             </div>
             
